--- a/folgenUndReihen.tex
+++ b/folgenUndReihen.tex
@@ -60,12 +60,12 @@ $\forall (a_n)_{n \in \N}, (b_n)_{n \in \N}$ konvergent, mit $\lim_{n \to \infty
     $\lim_{n \to \infty} \left( 1 + \frac{a}{n} \right)^n$ &e$^a$\\\hline
     $\lim_{n \to 0} \frac{\sin n}{n}$ & $1$\\\hline
     $\lim_{n \to 1} \frac{\ln n}{n - 1}$ & $1$\\\hline
-    $\lim_{n \to \infty} \frac{n^m}{\exp(an)}$ && $m \in \R, a > 0$\\\hline
+    $\lim_{n \to \infty} \frac{n^m}{\exp(an)}$ & $0$ & $m \in \R, a > 0$\\\hline
     $\lim_{n \to 0} \frac{\exp(n) - 1}{n}$ & $1$\\\hline
     $\lim_{n \to 0} \frac{\ln(1 + n)}{n}$ & $1$\\\hline
     $\lim_{n \to \infty} \frac{\ln n}{n^a}$ & $0$ & $a > 0$\\\hline
     $\lim_{n \to 0} \frac{a^n - 1}{n}$ & $\ln a$ & $a > 0$\\\hline
-    $\lim_{n \to 0} n^a \ln n)$ & $0$ & $a > 0$\\\hline
+    $\lim_{n \to 0} (n^a \ln n)$ & $0$ & $a > 0$\\\hline
 \end{tabular}
 
 \subsection{Bernoulli Ungleichung}
