--- a/main.tex
+++ b/main.tex
@@ -63,13 +63,12 @@
 
 \begin{document}
 \begin{multicols}{3}
-    \include{general}
-    \include{zahlenUndVektoren}
-    \include{folgenUndReihen}
-    \include{stetigeFunktionen}
-    \include{differenzierbareFunktionen}
-    \include{riemannIntegral}
+    \input{general}
+    \input{zahlenUndVektoren}
+    \input{folgenUndReihen}
+    \input{stetigeFunktionen}
+    \input{differenzierbareFunktionen}
+    \input{riemannIntegral}
     \todo{Bisektionsverfahren}
-    \todo{lim x-> 1 sin(x)/x = 1}
 \end{multicols}
 \end{document}
