--- a/general.tex
+++ b/general.tex
@@ -3,15 +3,91 @@
 \section{Allgemein}
 
 \subsection{Potenzen und Wurzeln}
+\begin{compactitem}
+    \item 
+        \begin{inparaitem}
+            \item $a^1 = a$
+            \item $a^0 = 1$
+        \end{inparaitem}
+    \item $a^{-n} = \frac{1}{a^n}$
+    \item 
+        \begin{inparaitem}
+            \item $a^{\frac{1}{n}} = \sqrt[^n]{a}$
+            \item $a^{\frac{m}{n}} = \sqrt[^n]{a^m}$
+        \end{inparaitem}
+    \item $a^x = e^{x \ln a}$
+    \item $a^ma^n = a^{m + n}$
+    \item $\frac{a^m}{a^n} = a^{m - n}$
+    \item $(a^m)^n = a^{m n}$
+    \item $a^nb^n = (ab)^n$
+    \item $\frac{a^n}{b^n} = \left( \frac{a}{b} \right)^n$
+\end{compactitem}
 
 \subsection{Logarithmen}
+$y = \log_a x \iff a^x = x$
+\begin{compactitem}
+    \item $a^{\log_a x} = x$
+    \item $\log_a a^x = x$
+    \item 
+        \begin{inparaitem}
+            \item $\log_a a = 1$
+            \item $\log_a 1 = 0$
+        \end{inparaitem}
+    \item $\log(uv) = \log(u) + \log(v)$
+    \item $\log(\frac{u}{v}) = \log(u) - \log(v)$
+    \item $\log(u^r) = r \log(u)$
+    \item $\log_a x = \frac{\log_b x}{\log_b a}$
+\end{compactitem}
+
+\subsection{Komplexe Zahlen}
 
 \subsection{Spezielle Summen}
+\begin{tabular}{l | l | c}
+    $\sum_{k=1}^{n} k$ & $1 + 2 + \dots + n$ & $\frac{n(n+1)}{2}$\\\hline
+    $\sum_{k=1}^{n} k^2$ & $1 + 4 + \dots + n^2$ & $\frac{n(n+1)(2n+1)}{6}$\\\hline
+    $\sum_{k=1}^{n} k^3$ & $1 + 8 + \dots n^3$ & $\left( \sum_{k=1}^{\infty} k  \right)^2$\\\hline
+    $\sum_{k=1}^{n} (2k - 1)$ & $1 + 3 + \dots + (2n -1)$ & $n^2$\\\hline
+    $\sum_{k=1}^{n} (2k - 1)^2$ & $1 + \dots + (2n - 1)^2$ & $\frac{n(2n-1)(2n+1)}{3}$\\\hline
+    $\sum_{k=0}^{n-1} q^k$ & $1 + q + \dots = \frac{q^n-1}{q-1}$ & $\frac{1 - q^n}{1-q}, \ q \not\in \{0, 1\}$\\\hline
+\end{tabular}
+
+\subsection{Trigonometrische Funktionen}
+\begin{compactdesc}
+    \item[Sinussatz:] $\frac{a}{\sin \alpha} = \frac{b}{\sin \beta} = \frac{c}{\sin \gamma} = 2r$
+    \item[Cosinussatz:] $a^2 = b^2 + c^2 - 2ab \cos \alpha$
+\end{compactdesc}
 \begin{compactitem}
-    \item $\sum_{k=1}^{\infty} k = 1 + 2 + 3 + \dots + n = \frac{n(n+1)}{2}$
-    \item $\sum_{k=1}^{\infty} k^2 = 1 + 4 + 9 + \dots + n^2 = \frac{n(n+1)(2n+1)}{6}$
-    \item $\sum_{k=1}^{\infty} k^3 = 1 + 8 + 27 + \dots n^3 = \left( \sum_{k=1}^{\infty} k  \right)^2$
-    \item $\sum_{k=1}^{\infty} (2k - 1) = 1 + 3 + 5 + \dots + (2n -1) = n^2$
-    \item $\sum_{k=1}^{\infty} (2k - 1)^2 = 1 + 9 + 25 + \dots = \frac{n(2n-1)(2n+1)}{3}$
-    \item $\sum_{k=0}^{n-1} q^k = 1 + q + \dots = \frac{q^n-1}{q-1} = \frac{1 - q^n}{1-q}, \ q \not\in \{0, 1\}$
+    \item $\sin^2a + \cos^2a = 1$
+    \item $\tan a = \frac{\sin a}{\cos a}$
+    \item $1 + \tan^2 a = \frac{1}{\cos^2 a}$
 \end{compactitem}
+
+\subsubsection{Hyperbolisch}
+\begin{compactitem}
+    \item $\cosh^2(x) - \sinh^2(x) = 1$
+    \item $\sinh(a + b) = \sinh(a)\cosh(b) + \cosh(a)\sinh(b)$
+    \item $\cosh(a + b) = \cosh(a)\cosh(b) + \sinh(a)\sinh(b)$
+\end{compactitem}
+
+\subsubsection{Winkel}
+\begin{tabular}{c c c c || c c c c}
+    deg   & rad                & $\sin$                 & $\cos$                  & deg & rad & $\sin$ & $\cos$\\\hline
+    $0$   & $0$                & $0$                    & $1$                     &
+    $30$  & $\frac{\pi}{6}$    & $\frac{1}{2}$          & $\frac{\sqrt{3}}{2}$\\
+    $45$  & $\frac{\pi}{4}$    & $\frac{\sqrt{2}}{2}$   & $\frac{\sqrt{2}}{2}$    &
+    $60$  & $\frac{\pi}{3}$    & $\frac{\sqrt{3}}{2}$   & $\frac{1}{2}$\\
+    $90$  & $\frac{\pi}{2}$    & $1$                    & $0$                     &
+    $120$ & $\frac{2\pi}{3}$   & $\frac{\sqrt{3}}{2} $  & $\frac{-1}{2}$\\
+    $135$ & $\frac{3 \pi}{4}$  & $\frac{\sqrt{2}}{2}$   & $\frac{-\sqrt{2}}{2}$   &
+    $150$ & $\frac{5 \pi}{6}$  & $\frac{1}{2}$          & $\frac{-\sqrt{3}}{2}$\\
+    $180$ & $\pi$              & $0$                    & $-1$                    &
+    $210$ & $\frac{7\pi}{6}$   & $\frac{-1}{2}$         & $\frac{-\sqrt{3}}{2}$\\
+    $225$ & $\frac{5\pi}{4}$   & $\frac{-\sqrt{2}}{2}$  & $\frac{-\sqrt{2}}{2}$   &
+    $240$ & $\frac{4\pi}{3}$   & $\frac{-\sqrt{3}}{2}$  & $\frac{-1}{2}$\\
+    $270$ & $\frac{3 \pi}{2}$  & $-1$                   & $0$                     &
+    $300$ & $\frac{5 \pi}{3}$  & $\frac{-\sqrt{3}}{2} $ & $\frac{1}{2}$\\
+    $315$ & $\frac{7 \pi}{4}$  & $\frac{-\sqrt{2}}{2} $ & $\frac{\sqrt{2}}{2}$    &
+    $330$ & $\frac{11 \pi}{6}$ & $\frac{-1}{2} $        & $\frac{\sqrt{3}}{2}$\\
+    
+\end{tabular}
+
