--- a/general.tex
+++ b/general.tex
@@ -39,8 +39,6 @@ $y = \log_a x \iff a^x = x$
     \item $\log_a x = \frac{\log_b x}{\log_b a}$
 \end{compactitem}
 
-\subsection{Komplexe Zahlen}
-
 \subsection{Spezielle Summen}
 \begin{tabular}{l | l | c}
     $\sum_{k=1}^{n} k$ & $1 + 2 + \dots + n$ & $\frac{n(n+1)}{2}$\\\hline
@@ -88,6 +86,15 @@ $y = \log_a x \iff a^x = x$
     $300$ & $\frac{5 \pi}{3}$  & $\frac{-\sqrt{3}}{2} $ & $\frac{1}{2}$\\
     $315$ & $\frac{7 \pi}{4}$  & $\frac{-\sqrt{2}}{2} $ & $\frac{\sqrt{2}}{2}$    &
     $330$ & $\frac{11 \pi}{6}$ & $\frac{-1}{2} $        & $\frac{\sqrt{3}}{2}$\\
-    
 \end{tabular}
+
+\subsubsection{Reduktion}
+\resizebox{\columnwidth}{!}{\begin{tabular}{l | l | l}
+    $\sin \frac{\pi}{2} - a = \cos a$ & $\cos \frac{\pi}{2} - a = \sin a$ & $\tan \frac{\pi}{2} - a = \frac{1}{\tan a}$\\
+    $\sin \frac{\pi}{2} + a = \cos a$ & $\cos \frac{\pi}{2} + a = -\sin a$ & $\tan \frac{\pi}{2} + a = \frac{-1}{\tan a}$\\
+    $\sin \pi - a = \sin a$ & $\cos \pi - a = -\cos a$ & $\tan \pi - a = -\tan a$\\
+    $\sin \pi + a = -\sin a$ & $\cos \pi + a = -\cos a$ & $\tan \pi + a = \tan a$\\
+    $\sin 2\pi -a = -\sin a$ & $\cos 2\pi - a = \cos a$ & $\tan 2 \pi - a = -\tan a$\\
+    $\sin -a = -\sin a$ & $\cos - a = \cos a$ & $\tan - a = -\tan a$\\
+\end{tabular}}
 
