--- a/main.tex
+++ b/main.tex
@@ -62,13 +62,14 @@
 \setlength{\tabcolsep}{0.3em}
 
 \begin{document}
-\begin{multicols}{3}
+\begin{multicols*}{3}
     \input{general}
     \input{zahlenUndVektoren}
     \input{folgenUndReihen}
     \input{stetigeFunktionen}
     \input{differenzierbareFunktionen}
     \input{riemannIntegral}
-    \todo{Bisektionsverfahren}
-\end{multicols}
+    \clearpage
+    \mbox{}
+\end{multicols*}
 \end{document}
