--- a/stetigeFunktionen.tex
+++ b/stetigeFunktionen.tex
@@ -39,7 +39,6 @@ $f : D \to \R, D \subset R, \ \forall x,y \in D$ ist:
     \item[monoton:] falls mono. wachsend oder mono. fallend.
     \item[streng monoton:] falls streng monoton wachsend oder streng monoton fallend.
 \end{compactdesc}
-\todo{Show monotony}
 
 \subsection{Stetigkeit}
 \begin{compactdesc}
@@ -75,7 +74,7 @@ Funktion $P: \R \to \R, P(x)= a_nx^n + \dots + a_0, a_n, \dots a_0 \in \R$.
 \end{compactdesc}
 \begin{compactitem}
     \item Sind auf ganz $\R$ stetig.
-    \item $\frac{P}{Q}: R \setminus \{x_1, \dots x_m\}  \to \R, \ x \mapsto \frac{P(x)}{Q(x)}$ ist stetig für $P,Q$ auf $\R$ wobei $ Q \neq 0$  und Nullstellen $x_1, \dots, x_m$ von $Q$.
+    \item $\frac{P}{Q}: R \setminus \{x_1, \dots x_m\}  \to \R, \ x \mapsto \frac{P(x)}{Q(x)}$ ist stetig für $P,Q$ auf $\R, Q \neq 0$  und Nullst. $x_1, \dots, x_m$ von $Q$.
 \end{compactitem}
 
 \subsection{Zwischerwertsatz}
