--- a/folgenUndReihen.tex
+++ b/folgenUndReihen.tex
@@ -7,8 +7,7 @@
     \item[Konvergent:] ist $(a_n)_{n \in \N}$ falls $\exists l \in R: \quad \forall \epsilon > 0$ das Set $\left\{ n \in \N | a_n \not\in  ] l - \epsilon, l + \epsilon[ \right\} = \left\{ n \in N^* | \left| a_n - l \right| \ge \epsilon  \right\} $ endlich ist
         \begin{compactitem}
             \item $\forall  \epsilon > 0 \ \exists  N \ge 1: \quad |a_n - l| < \epsilon \ \forall n \ge N$
-            \item Jede konvergente Folge ist beschränkt
-            \item Nicht konvergente Folgen sind divergent
+            \item $(a_n)_{n \in \N}$ konvergente $\implies (a_n)_{n \in \N}$ beschränkt.
             \item Es gibt $2$ Arten von divergenten Folgen
         \end{compactitem}
     \item[Grenzwert:] $(a_n)_{n \in \N}$ konvergiert gegen $a \iff \lim_{n \to \infty} a_n = a \iff \forall \epsilon > 0, \exists n_0 \in N, \forall n \ge n_0: \left| a_n - a \right| < \epsilon$
@@ -56,8 +55,8 @@ $\forall (a_n)_{n \in \N}, (b_n)_{n \in \N}$ konvergent, mit $\lim_{n \to \infty
     $\lim_{n \to \infty} \frac{a^n}{n!}$ & $0$\\\hline
     $\lim_{n \to \infty} \sum_{k=1}^{n} \frac{1}{k}$ & $\infty$\\\hline
     $\lim_{n \to \infty} \left( 1 + \frac{1}{n} \right)^n$ & $e$\\\hline
-    $\lim_{n \to \infty} \left( 1 - \frac{1}{n} \right)^n$ & $\frac{1}{e}$\\\hline
     $\lim_{n \to \infty} \left( 1 + \frac{a}{n} \right)^n$ &e$^a$\\\hline
+    $\lim_{n \to \infty} \left( 1 - \frac{1}{n} \right)^n$ & $\frac{1}{e}$\\\hline
     $\lim_{n \to 0} \frac{\sin n}{n}$ & $1$\\\hline
     $\lim_{n \to 1} \frac{\ln n}{n - 1}$ & $1$\\\hline
     $\lim_{n \to \infty} \frac{n^m}{\exp(an)}$ & $0$ & $m \in \R, a > 0$\\\hline
@@ -138,9 +137,6 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
     \item Es gibt je eine Teilfolgen von $(a_n)_{n \in \N}$ die $\liminf_{n \to \infty} a_n$ resp. $\limsup_{n \to \infty} a_n$ als Limes annehmen.
 \end{compactitem}
 
-\subsection{Folgen in $\R^{d}$ und $\C$}
-\todo{Folgen in $\R^d$ und $\C$}
-
 \subsection{Rezept: Konvergenz und Grenzwert}
 \begin{compactdesc}
     \item[Geschlossene Formel:]
@@ -189,27 +185,31 @@ Jede beschränkte Folge besitzt eine konvergente Teilfolge.
 \end{compactdesc}
 
 \subsection{Bekannte Reihen}
-\begin{tabular}{l | l | c | c | c}
-    \multicolumn{2}{l |}{Reihe} & Wert & konv. & div.\\\hline
-    \multicolumn{2}{l |}{Geometrische Reihe} & $q \in \C$ &&\\\hline
-    $\sum_{k=0}^{\infty} aq^k$ & $a + aq +$ & $\frac{a}{1-q}$ & $|g| < 1$ & $|q| \ge 1$\\\hline
-    $\sum_{k=0}^{\infty} (k+1)q^k$ & $1 + 2q +$ & $\frac{1}{(1-q)^2}$ &&\\\hline
-    \multicolumn{2}{l |}{Harmonische Reihe}&&&\\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k}$ & & $\infty$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^2}$ && $\frac{\pi^2}{6}$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^4}$ && $\frac{\pi^4}{90}$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k^a}$ &&& $a > 1$ & $a \le 1$\\\hline
-    \multicolumn{2}{l |}{Alternierende Harmon. Reihe} &&&\\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$ && $\ln 2$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$ && $\frac{\pi^2}{12}$ &&\\\hline
-    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$ && $\frac{\pi^4}{720}$ &&\\\hline
-    $\sum_{k=0}^{\infty} \frac{(-1)^k}{2k + 1}$ & $1 - \frac{1}{3} + \frac{1}{5} -$ & $\frac{\pi}{4}$ &&\\\hline
-    \multicolumn{1}{l |}{Teleskopreihe} &&&\\\hline
-    $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$ && $1$ &&\\\hline
-    \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &&\\\hline
-    $\sum_{k=0}^{\infty} \frac{z^k}{k!}$ & $1 + z + \frac{z^2}{2!} +$ & $\exp{z}$ &&\\\hline
-    $\sum_{k=0}^{\infty} \frac{(-1)^k}{k!}$ && $\frac{1}{e}$ &&\\\hline
-\end{tabular}
+\resizebox{\columnwidth}{!}{\begin{tabular}{l | l | c | c | c}
+    \multicolumn{2}{l |}{Reihe}                                      & Wert                                         & konv.               & div.\\\hline
+    \multicolumn{2}{l |}{Geometrische Reihe}                         & $q \in \C$                                   &                     & \\\hline
+    $\sum_{k=0}^{\infty} aq^k$                                       & $a + aq +$                                   & $\frac{a}{1-q}$     & $|g| < 1$    & $|q| \ge 1$\\\hline
+    $\sum_{k=0}^{\infty} (k+1)q^k$                                   & $1 + 2q +$                                   & $\frac{1}{(1-q)^2}$ &              & \\\hline
+    \multicolumn{2}{l |}{Harmonische Reihe}                          &                                              &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k}$                                &                                              & $\infty$            &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^2}$                              &                                              & $\frac{\pi^2}{6}$   &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^4}$                              &                                              & $\frac{\pi^4}{90}$  &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k^a}$                              &                                              &                     & $a > 1$      & $a \le 1$\\\hline
+    \multicolumn{2}{l |}{Alternierende Harmon. Reihe}                &                                              &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k}$                       &                                              & $\ln 2$             &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^2}$                     &                                              & $\frac{\pi^2}{12}$  &              & \\\hline
+    $\sum_{k=1}^{\infty} \frac{(-1)^{k+1}}{k^4}$                     &                                              & $\frac{\pi^4}{720}$ &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{(-1)^k}{2k + 1}$                      & $1 - \frac{1}{3} + \frac{1}{5} -$            & $\frac{\pi}{4}$     &              & \\\hline
+    \multicolumn{1}{l |}{Teleskopreihe}                              &                                              &                     & \\\hline
+    $\sum_{k=1}^{\infty} \frac{1}{k(k+1)}$                           &                                              & $1$                 &              & \\\hline
+    \multicolumn{3}{l |}{Exponentialfunktion $z \in \C,$ konv. abs.} &                                              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{z^k}{k!}$                             & $1 + z + \frac{z^2}{2!} +$                   & $\exp{z}$           &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{(-1)^k}{k!}$                          &                                              & $\frac{1}{e}$       &              & \\\hline
+    $\sum_{k=0}^{\infty} (-1)^k\frac{x^{2k+1}}{(2k+1)!}$             & $x -\frac{x^3}{3!} + \frac{x^5}{5!} -$ & $ \sin x$           &              & \\\hline
+    $\sum_{k=0}^{\infty} (-1)^k\frac{x^{2k}}{(2k)!}$                 & $1-\frac{x^2}{2}+\frac{x^4}{4!}-$       & $\cos x$            &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{x^{2k+1}}{(2k+1)!}$                   & $x+\frac{x^3}{3!}+\frac{x^5}{5!}+$      & $\sinh x$           &              & \\\hline
+    $\sum_{k=0}^{\infty} \frac{x^{2k}}{(2k)!}$                       & $1+\frac{x^2}{2}+\frac{x^4}{4!}+$       & $\cosh x$           &              & \\\hline
+\end{tabular}}
 
 \subsection{Rechenregeln}
 $\forall \sum_{k=1}^{\infty} a_k, \sum_{k=1}^{\infty} b_k$ konvergent, $\alpha \in \C$
